# mdflib

./: .gitignore  CMakeLists.txt  README.md  index.html  worker.js
.devcontainer/: Dockerfile  devcontainer.json
mdflib/: CMakeLists.txt
mdflib/src/: half.hpp  platform.cpp
mdflibjs/: CMakeLists.txt
mdflibjs/src/: attachment_wrapped.h  bindings.cpp  bindings_original.cpp  can_message_wrapped.h  channel_conversion_wrapped.h  channel_group_wrapped.h  channel_observer_wrapped.h  channel_wrapped.h  data_group_wrapped.h  etag_helpers.h  event_wrapped.h  file_history_wrapped.h  file_wrapped.h  header_wrapped.h  metadata_wrapped.h  reader_wrapped.h  source_information_wrapped.h  writer_wrapped.h
mdflibjs/triplets/: emscripten.cmake
